# docs/swagger.yaml
@@ -1,6 +1,397 @@
+definitions:
+  cacao.AgentTarget:
+    properties:
+      address:
+        additionalProperties:
+          items:
+            type: string
+          type: array
+        type: object
+      agent_target_extensions:
+        items:
+          type: string
+        type: array
+      authentication_info:
+        type: string
+      category:
+        items:
+          type: string
+        type: array
+      contact:
+        $ref: '#/definitions/cacao.Contact'
+      description:
+        type: string
+      http_url:
+        type: string
+      id:
+        type: string
+      location:
+        $ref: '#/definitions/cacao.CivicLocation'
+      logical:
+        items:
+          type: string
+        type: array
+      name:
+        type: string
+      port:
+        type: string
+      sector:
+        type: string
+      type:
+        type: string
+    required:
+    - id
+    - name
+    - type
+    type: object
+  cacao.AuthenticationInformation:
+    properties:
+      description:
+        type: string
+      id:
+        type: string
+      kms:
+        type: boolean
+      kms_key_identifier:
+        type: string
+      name:
+        type: string
+      oauth_header:
+        type: string
+      password:
+        type: string
+      private_key:
+        type: string
+      token:
+        type: string
+      type:
+        type: string
+      user_id:
+        type: string
+      username:
+        type: string
+    required:
+    - id
+    - type
+    type: object
+  cacao.CivicLocation:
+    properties:
+      administrative_area:
+        type: string
+      building_details:
+        type: string
+      city:
+        type: string
+      country:
+        type: string
+      description:
+        type: string
+      latitude:
+        type: string
+      longitude:
+        type: string
+      name:
+        type: string
+      network_details:
+        type: string
+      postal_code:
+        type: string
+      precision:
+        type: string
+      region:
+        type: string
+      street_address:
+        type: string
+    type: object
+  cacao.Command:
+    properties:
+      command:
+        type: string
+      command_b64:
+        type: string
+      description:
+        type: string
+      playbook_activity:
+        type: string
+      type:
+        type: string
+      version:
+        type: string
+    required:
+    - command
+    - type
+    type: object
+  cacao.Contact:
+    type: object
+  cacao.DataMarking:
+    properties:
+      affected_party_notifications:
+        type: string
+      attribution:
+        type: string
+      created:
+        type: string
+      created_by:
+        type: string
+      description:
+        type: string
+      encrypt_in_transit:
+        type: string
+      end_date:
+        type: string
+      external_references:
+        items:
+          $ref: '#/definitions/cacao.ExternalReferences'
+        type: array
+      id:
+        type: string
+      iep_version:
+        type: string
+      labels:
+        items:
+          type: string
+        type: array
+      name:
+        type: string
+      permitted_actions:
+        type: string
+      revoked:
+        type: boolean
+      start_date:
+        type: string
+      statement:
+        type: string
+      tlp:
+        type: string
+      tlpv2_level:
+        type: string
+      type:
+        type: string
+      unmodified_resale:
+        type: string
+      valid_from:
+        type: string
+      valid_until:
+        type: string
+    type: object
+  cacao.ExternalReferences:
+    properties:
+      description:
+        type: string
+      name:
+        type: string
+      source:
+        type: string
+      url:
+        type: string
+    required:
+    - description
+    - name
+    - source
+    - url
+    type: object
+  cacao.Playbook:
+    properties:
+      agent_definitions:
+        additionalProperties:
+          $ref: '#/definitions/cacao.AgentTarget'
+        type: object
+      authentication_info_definitions:
+        additionalProperties:
+          $ref: '#/definitions/cacao.AuthenticationInformation'
+        type: object
+      created:
+        description: date time is already validate by the field type!
+        type: string
+      created_by:
+        type: string
+      data_marking_definitions:
+        $ref: '#/definitions/cacao.DataMarking'
+      derived_from:
+        items:
+          type: string
+        type: array
+      description:
+        type: string
+      external_references:
+        items:
+          $ref: '#/definitions/cacao.ExternalReferences'
+        type: array
+      id:
+        type: string
+      impact:
+        type: integer
+      labels:
+        items:
+          type: string
+        type: array
+      markings:
+        items:
+          type: string
+        type: array
+      modified:
+        description: ',datetime=2006-01-02T15:04:05Z07:00"`'
+        type: string
+      name:
+        type: string
+      playbook_types:
+        items:
+          type: string
+        type: array
+      priority:
+        type: integer
+      severity:
+        type: integer
+      spec_version:
+        type: string
+      target_definitions:
+        additionalProperties:
+          $ref: '#/definitions/cacao.AgentTarget'
+        type: object
+      type:
+        type: string
+      valid_from:
+        type: string
+      valid_until:
+        type: string
+      workflow:
+        additionalProperties:
+          $ref: '#/definitions/cacao.Step'
+        type: object
+      workflow_exception:
+        type: string
+      workflow_start:
+        type: string
+    required:
+    - created
+    - created_by
+    - description
+    - external_references
+    - id
+    - impact
+    - labels
+    - modified
+    - name
+    - playbook_types
+    - priority
+    - severity
+    - spec_version
+    - type
+    - valid_from
+    - valid_until
+    - workflow
+    - workflow_exception
+    - workflow_start
+    type: object
+  cacao.Step:
+    properties:
+      agent:
+        type: string
+      cases:
+        additionalProperties:
+          type: string
+        type: object
+      commands:
+        items:
+          $ref: '#/definitions/cacao.Command'
+        type: array
+      condition:
+        type: string
+      delay:
+        type: integer
+      description:
+        type: string
+      external_references:
+        items:
+          $ref: '#/definitions/cacao.ExternalReferences'
+        type: array
+      id:
+        type: string
+      in_args:
+        items:
+          type: string
+        type: array
+      name:
+        type: string
+      next_steps:
+        items:
+          type: string
+        type: array
+      on_completion:
+        type: string
+      on_failure:
+        type: string
+      on_false:
+        items:
+          type: string
+        type: array
+      on_success:
+        type: string
+      on_true:
+        items:
+          type: string
+        type: array
+      out_args:
+        items:
+          type: string
+        type: array
+      owner:
+        type: string
+      playbook_id:
+        type: string
+      playbook_variables:
+        additionalProperties:
+          $ref: '#/definitions/cacao.Variables'
+        type: object
+      playbook_version:
+        type: string
+      switch:
+        type: string
+      targets:
+        items:
+          type: string
+        type: array
+      timeout:
+        type: integer
+      type:
+        type: string
+    type: object
+  cacao.Variables:
+    properties:
+      constant:
+        type: boolean
+      description:
+        type: string
+      external:
+        type: boolean
+      name:
+        type: string
+      type:
+        type: string
+      value:
+        type: string
+    type: object
 info:
   contact: {}
-  title: Swagger Example API
-  version: "1.0"
-paths: {}
+paths:
+  /trigger/workflow:
+    post:
+      consumes:
+      - application/json
+      description: trigger workflow
+      parameters:
+      - description: execute playbook by payload
+        in: body
+        name: playbook
+        required: true
+        schema:
+          $ref: '#/definitions/cacao.Playbook'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"execution_id":"uuid","payload":"playbook--uuid"}'
+      summary: trigger a workflow with via cacao payload
+      tags:
+      - workflow
 swagger: "2.0"
